<resources>
    <string name="app_name">TheGalleryApp</string>
    <string name="star">star</string>
    <string name="loading_image">Loading image</string>
    <string name="loading_image_failed">Image load failed!</string>
    <string name="image_loaded">Image Loaded Successfully!</string>
    <string name="refresh">Refresh</string>
    <string name="cliff">cliff</string>
    <string name="add_image">Add Image</string>
    <string name="enter_image_dimensions">Enter image dimensions</string>
    <string name="width">width</string>
    <string name="height">height</string>
    <string name="fetch_image">FETCH IMAGE</string>
    <string name="fetching_random_image">Fetching Random Image</string>
    <string name="choose_palette_colour">Choose palette colour</string>
    <string name="choose_label">Choose a label</string>
    <string name="ocean">ocean</string>
    <string name="label">Label</string>
    <string name="ADD" />
    <string name="add">ADD</string>
    <string name="Add_image">AddImage</string>
    <string name="nothing_on_screen">Uh-Oh! Nothing here.Tap on icon to add something</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="share_button">Share Button</string>
    <string name="add_image_gallery">Add</string>
    <string name="labeltv">LabelTV</string>
    <string name="palette_colortv">Palette_ColorTV</string>
    <string name="edit_iamge">Edit image</string>
    <string name="edit">Edit</string>
    <string name="please_wait">Please wait...</string>
    <string name="custom">Custom</string>
    <string name="choose_palette_color">Choose palette color</string>
    <string name="choose_label_edit">Choose Label</string>
    <string name="Remove">remove</string>
    <string name="Change_Label">Change Label</string>
    <string name="Remove_item">Remove</string>
    <string name="share_image">Share via</string>
    <string name="drag_and_drop">Drag or Drop</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="choose_new_palette_color">Choose new palette color</string>
    <string name="choose_new_label_title">Choose new label</string>
    <string name="update">UPDATe</string>
    <string name="share">SHARE</string>
    <string name="custom">Custom</string>

</resources>